# app/Models/Plant.php
@@ -11,7 +11,16 @@ class Plant extends Model
 
     protected $fillable = [
         'common_name',
+        'ville',
+        'watering',
         'watering_general_benchmark',
+        'image_url',
+        'thumbnail_url',
+        'medium_url',
+        'regular_url',
+        'license',
+        'license_name',
+        'license_url'
     ];
 
     // Cast le champ watering_general_benchmark en array pour le JSON
@@ -28,4 +37,5 @@ class Plant extends Model
     {
         return $this->belongsToMany(User::class, 'plant_user', 'plant_id', 'user_id');
     }
+
 }
